Change color variables. Fix toggle readability

--- a/src/components/BanxNotifications/BanxNotificationsSider/screens/SettingsScreen/SettingsScreen.module.less
+++ b/src/components/BanxNotifications/BanxNotificationsSider/screens/SettingsScreen/SettingsScreen.module.less
@@ -179,8 +179,4 @@
 
 .addressInputToggle {
   padding-top: 8px;
-
-  input {
-    position: absolute;
-  }
 }
