--- a/src/components/Toggle/Toggle.module.less
+++ b/src/components/Toggle/Toggle.module.less
@@ -10,6 +10,7 @@
   opacity: 0;
   width: 0;
   height: 0;
+  position: absolute;
 }
 
 .slider {
